--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-## #1.Introduce
+<h2>Introduce</h2>
+
 프론트엔드 개발자를 준비하는 김민서입니다.
 <br/><br/>
 
-## #2. Tech Stack
+<h2>Tech Stack</h2>
 <div>
 <img src="https://img.shields.io/badge/javascript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=white"> 
  <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
