--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h2>Introduce</h2>
-Hi, I'm @minseokiim.
+Hi, I'm @minseokiim.<br/>
+I've been interested in Next.js lately.
 <br/><br/>
 
 <h2>Tech Stack</h2>
